Added Comments to Update z values

--- a/Update Z-Coordinate from Attirbutes.ipynb
+++ b/Update Z-Coordinate from Attirbutes.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'django_apis_env' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/ADMIN/Desktop/Repos/github/Apis/django_apis_env/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
+    "#Enter Feature Name\n",
     "x = \"Contours_Topo_1m_31_07_2023_v2\"\n"
    ]
   },
@@ -360,7 +372,7 @@
   "language_info": {
    "file_extension": ".py",
    "name": "python",
-   "version": "3"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
